--- a/config/database.yml
+++ b/config/database.yml
@@ -35,11 +35,21 @@ test:
   socket: /tmp/mysql.sock
 
 production:
-  adapter: mysql2
+  adapter: postgresql
   encoding: utf8
   reconnect: false
   database: framework_production
   pool: 5
   username: root
   password:
-  socket: /tmp/mysql.sock
+  host: localhost
+  #socket: /tmp/mysql.sock
+#production:
+#  adapter: mysql2
+#  encoding: utf8
+#  reconnect: false
+#  database: framework_production
+#  pool: 5
+#  username: root
+#  password:
+#  socket: /tmp/mysql.sock
